fix: hide decoration on mobile

--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -80,10 +80,6 @@
     display: none;
   }
 
-  .header__logo {
-    display: none;
-  }
-
   .header__nav {
     gap: 0.5rem;
   }
